[gd_scene load_steps=9 format=2]

[ext_resource path="res://sphere.png" type="Texture" id=1]
[ext_resource path="res://Scene.gd" type="Script" id=2]
[ext_resource path="res://addons/kenney_interface_sounds/bong_001.wav" type="AudioStream" id=3]
[ext_resource path="res://addons/kenney_interface_sounds/yay.mp3" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 31.0161

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 320 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 320, 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 40 )

[node name="Root" type="Node2D"]
script = ExtResource( 2 )

[node name="Sphere" type="Sprite" parent="."]
position = Vector2( 240, 106 )
texture = ExtResource( 1 )

[node name="Area" type="Area2D" parent="Sphere"]

[node name="Hitbox" type="CollisionShape2D" parent="Sphere/Area"]
shape = SubResource( 1 )

[node name="Player" type="AudioStreamPlayer" parent="Sphere"]
stream = ExtResource( 3 )

[node name="Walls" type="Node2D" parent="."]

[node name="Right" type="Area2D" parent="Walls"]

[node name="Hitbox" type="CollisionShape2D" parent="Walls/Right"]
position = Vector2( 640, 320 )
shape = SubResource( 2 )

[node name="Left" type="Area2D" parent="Walls"]
position = Vector2( 0, 320 )

[node name="Hitbox" type="CollisionShape2D" parent="Walls/Left"]
shape = SubResource( 2 )

[node name="Top" type="Area2D" parent="Walls"]

[node name="Hitbox" type="CollisionShape2D" parent="Walls/Top"]
position = Vector2( 320, 0 )
shape = SubResource( 3 )

[node name="Bottom" type="Area2D" parent="Walls"]
position = Vector2( 320, 640 )

[node name="Hitbox" type="CollisionShape2D" parent="Walls/Bottom"]
shape = SubResource( 3 )

[node name="YayArea" type="Area2D" parent="."]
position = Vector2( 590, 590 )

[node name="Hitbox" type="CollisionShape2D" parent="YayArea"]
shape = SubResource( 4 )

[node name="YayPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="area_entered" from="Sphere/Area" to="." method="_on_Area_area_entered"]
[connection signal="area_entered" from="YayArea" to="." method="_on_YayArea_area_entered"]
